--- a/TaggyAppFrontend/package.json
+++ b/TaggyAppFrontend/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:taggyapp-frontend": "node dist/taggyapp-frontend/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -22,8 +21,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/service-worker": "^18.2.0",
-    "@angular/ssr": "^18.2.3",
-    "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "primeflex": "^3.3.1",
     "primeng": "^17.18.9",
     "rxjs": "~7.8.0",
