Added blob repo

--- a/TaggyAppBackend/TaggyAppBackend.Api/appsettings.Template.json
+++ b/TaggyAppBackend/TaggyAppBackend.Api/appsettings.Template.json
@@ -17,6 +17,13 @@
     "ExpirationTime": 30,
     "RefreshTokenExpirationTime": 10080
   },
+  "Azure": {
+    "AzureBlobOptions": {
+      "StorageAccount": "blobstorageaccount",
+      "Key": "azureblobkey",
+      "Container": "container"
+    }
+  },
   "Sieve": {
     "CaseSensitive": "boolean: should property names be case-sensitive? Defaults to false",
     "DefaultPageSize": "int number: optional number to fallback to when no page argument is given. Set <=0 to disable paging if no pageSize is specified (default).",
