--- a/TaggyAppBackend/TaggyAppBackend.Api/TaggyAppBackend.Api.csproj
+++ b/TaggyAppBackend/TaggyAppBackend.Api/TaggyAppBackend.Api.csproj
@@ -9,6 +9,8 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="13.0.1" />
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.21.2" />
+        <PackageReference Include="Azure.Storage.Common" Version="12.20.1" />
         <PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
