--- a/TaggyAppFrontend/package.json
+++ b/TaggyAppFrontend/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/service-worker": "^18.2.0",
+    "angular-svg-round-progressbar": "^13.0.0",
     "jwt-decode": "^4.0.0",
     "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
     "primeng": "^17.18.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
