--- a/TaggyAppBackend/TaggyAppBackend.Api/appsettings.Template.json
+++ b/TaggyAppBackend/TaggyAppBackend.Api/appsettings.Template.json
@@ -17,19 +17,23 @@
     "ExpirationTime": 30,
     "RefreshTokenExpirationTime": 10080
   },
+  "SocialAuth": {
+    "Google": {
+      "ClientId": "Client ID"
+    }
+  },
   "Azure": {
     "AzureBlobOptions": {
       "StorageAccount": "blobstorageaccount",
-      "Key": "azureblobkey",
-      "Container": "container"
+      "Key": "azureblobkey"
     }
   },
   "Sieve": {
-    "CaseSensitive": "boolean: should property names be case-sensitive? Defaults to false",
-    "DefaultPageSize": "int number: optional number to fallback to when no page argument is given. Set <=0 to disable paging if no pageSize is specified (default).",
-    "MaxPageSize": "int number: maximum allowed page size. Set <=0 to make infinite (default)",
-    "ThrowExceptions": "boolean: should Sieve throw exceptions instead of silently failing? Defaults to false",
-    "IgnoreNullsOnNotEqual": "boolean: ignore null values when filtering using is not equal operator? Defaults to true",
-    "DisableNullableTypeExpressionForSorting": "boolean: disable the creation of nullable type expression for sorting. Some databases do not handle it (yet). Defaults to false"
+    "CaseSensitive": "false",
+    "DefaultPageSize": "10",
+    "MaxPageSize": "100",
+    "ThrowExceptions": "true",
+    "IgnoreNullsOnNotEqual": "true",
+    "DisableNullableTypeExpressionForSorting": "false"
   }
 }
