Added group selection and crud on front, fixed minor bugs

--- a/TaggyAppBackend/TaggyAppBackend.Api/TaggyAppBackend.Api.csproj
+++ b/TaggyAppBackend/TaggyAppBackend.Api/TaggyAppBackend.Api.csproj
@@ -31,4 +31,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Migrations\20240927204756_AddedGroupIsPrivate.Designer.cs" />
+    </ItemGroup>
+
 </Project>
