--- a/TaggyAppBackend/TaggyAppBackend.Api/appsettings.Template.json
+++ b/TaggyAppBackend/TaggyAppBackend.Api/appsettings.Template.json
@@ -25,7 +25,12 @@
   "Azure": {
     "AzureBlobOptions": {
       "StorageAccount": "blobstorageaccount",
-      "Key": "azureblobkey"
+      "Key": "azureblobkey",
+      "MaxBlobSize": 10737418240,
+      "BlockSize": 1048576,
+      "MaxParallelism": 10,
+      "SasTokenExpirationTime": 30,
+      "Container": "taggy-app-files"
     }
   },
   "Sieve": {
