--- a/TaggyAppFrontend/.gitignore
+++ b/TaggyAppFrontend/.gitignore
@@ -36,7 +36,7 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
-package-lock.json
+# package-lock.json // needed for npm ci cache
 
 # System files
 .DS_Store
