--- a/TaggyAppFrontend/package.json
+++ b/TaggyAppFrontend/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:ci": "ng test --watch=false --browsers=ChromeHeadlessCustom",
-    "build:ci": "ng build --prod"
+    "build:ci": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
