--- a/TaggyAppFunctions/TaggyAppFunctions/TaggyAppFunctions.csproj
+++ b/TaggyAppFunctions/TaggyAppFunctions/TaggyAppFunctions.csproj
@@ -1,24 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <AzureFunctionsVersion>v4</AzureFunctionsVersion>
+        <AzureFunctionsVersion>V4</AzureFunctionsVersion>
         <OutputType>Exe</OutputType>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App"/>
-        <PackageReference Include="Azure.Storage.Blobs" Version="12.22.2" />
-        <PackageReference Include="Imageflow.AllPlatforms" Version="0.13.2" />
-        <PackageReference Include="Imageflow.Net" Version="0.13.2" />
-        <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.23.0" />
-        <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="1.3.2" />
-        <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Storage" Version="6.6.0" />
-        <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Storage.Blobs" Version="6.6.0" />
-        <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.18.1" />
+        <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.21.0"/>
+        <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.17.0"/>
         <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0"/>
         <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="1.2.0"/>
-        <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage.Blobs" Version="5.3.3" />
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
