--- a/TaggyAppFunctions/TaggyApp.ImageResize/TaggyApp.ImageResize/Properties/launchSettings.json
+++ b/TaggyAppFunctions/TaggyApp.ImageResize/TaggyApp.ImageResize/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "TaggyAppFunctions": {
+    "TaggyApp.ImageResize": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7196",
+      "commandLineArgs": "--port 7263",
       "launchBrowser": false
     }
   }
