Updated CI/CD names

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,10 +1,14 @@
-name: Angular Build
+name: Angular Test and Build
 
 on:
   workflow_dispatch:
   push:
+    paths:
+      - 'TaggyAppFrontend/**'
     branches: [ "develop" ]
   pull_request:
+    paths:
+      - 'TaggyAppFrontend/**'
     branches: [ "develop" ]
 
 jobs:
